--- a/payroll.html
+++ b/payroll.html
@@ -383,17 +383,17 @@
                         <center>Pay Details</center>
                     </h6>
 
-                    <div class="spaceBox mt-4"></div><input type="hidden" name="_tabs_sel" value="pay_details">
+                    <div class="spaceBox mt-4"></div>
                     <div class="contentBox pay_details" id="_tabs_div">
                         <center>
-                            <table class="tablestyle " width="100%" cellpadding="2" cellspacing="0">
+                            <table class="tablestyle " width="100%" cellpadding="1" cellspacing="0">
                                 <tbody>
                                     <tr valign="top" class="d-flex flex-column flex-lg-row">
                                         <td class="pay-detail-td">
                                             <table class="tablestyle_inner">
                                                 <tbody>
                                                     <tr>
-                                                        <td colspan="2" class="tableheader">Earnings</td>
+                                                        <td colspan="3" class="tableheader">Earnings</td>
                                                     </tr>
                                                     <tr>
                                                         <td class="label">Basic Salary</td>
@@ -420,8 +420,7 @@
                                                         <td class="payslip_amount_row">0.000</td>
                                                     </tr>
                                                     <tr>
-                                                        <td>Total
-                                                            Earnings:</td>
+                                                        <td>Total Earnings:</td>
                                                         <td style="text-align:right">
                                                             14,850.000</td>
                                                     </tr>
