--- a/profile.html
+++ b/profile.html
@@ -151,9 +151,9 @@
             </div>
         </header>
 
-        <div class="row mt-3 mx-2 m-lg-4 d-flex justify-content-between">
+        <div class="row mt-3 mx-1 m-lg-4 d-flex justify-content-between">
 
-            <div class="col-lg-12 d-flex align-items-center  justify-content-between">
+            <div class="col-12 d-flex align-items-center  justify-content-between">
                 <div class="d-flex align-items-center pro-img p-3 p-lg-4">
                     <div>
                         <img src="Images/Profile (2).png" alt="" width="100" height="100">
@@ -229,7 +229,7 @@
                         <h5>Job Details</h5>
                     </div>
                     <div class="mt-3 per-details d-lg-flex">
-                        <div class="col-6">
+                        <div class="col-lg-6">
                             <label for="">Employee Id</label> <br>
                             <input type="text" value="001/2024"><br>
                             <label for="">Department</label> <br>
@@ -241,7 +241,7 @@
                             <label for="">Joining</label> <br>
                             <input type="text" value="24/05/2023">
                         </div>
-                        <div class="col-6">
+                        <div class="col-lg-6">
                             <label for="">Family</label> <br>
                             <input type="text" value="4"><br>
                             <label for="">Weekend/Weekly Off</label> <br>
@@ -279,7 +279,7 @@
                         <h5>Pay Details - Earnings</h5>
                     </div>
                     <div class="mt-3 per-details d-lg-flex">
-                        <div class="col-6">
+                        <div class="col-lg-6">
                             <label for="">Currency</label> <br>
                             <input type="text" value="Indian Rupee"><br>
                             <label for="">Grade</label> <br>
@@ -287,7 +287,7 @@
                             <label for="">Basic Salary</label> <br>
                             <input type="text" value="5,000.000"><br>
                         </div>
-                        <div class="col-6">
+                        <div class="col-lg-6">
                             <label for="">Internet And Telephone</label> <br>
                             <input type="text" value="0.000"><br>
                             <label for="">Total of Earnings(Gross)</label> <br>
