--- a/leaves.html
+++ b/leaves.html
@@ -39,7 +39,7 @@
             <li>
                 <a href="leaves.html">
                     <i class='bx bxs-home-smile' style="color:#0ac30a;"></i>
-                    <span class="links_name">Leaves</span>
+                    <span class="links_name" style="color:#0ac30a;">Leaves</span>
                 </a>
                 <span class="tooltip">Leaves </span>
             </li>
@@ -146,8 +146,9 @@
                         <p id="directionRlt">Arabic</p>
                     </div>
                 </button>
-                <button><a href=""><i class='bx bx-notification'></i></a></button>
-                <button><a href=""><i class='bx bx-user-circle'></i></a></button>
+                <button id="darkModeToggle"><a href=""><iconify-icon
+                            icon="bitcoin-icons:moon-filled"></iconify-icon></a></button>
+                <button><a href="profile.html"><i class='bx bx-user-circle'></i></a></button>
             </div>
         </header>
 
