--- a/loans.html
+++ b/loans.html
@@ -67,7 +67,7 @@
             <li>
                 <a href="loans.html">
                     <i class='bx bx-donate-heart' style="color:#0ac30a;"></i>
-                    <span class="links_name">Loans</span>
+                    <span class="links_name" style="color:#0ac30a;">Loans</span>
                 </a>
                 <span class="tooltip">Loans</span>
             </li>
@@ -148,8 +148,9 @@
                         <p id="directionRlt">Arabic</p>
                     </div>
                 </button>
-                <button><a href=""><i class='bx bx-notification'></i></a></button>
-                <button><a href=""><i class='bx bx-user-circle'></i></a></button>
+                <button id="darkModeToggle"><a href=""><iconify-icon
+                            icon="bitcoin-icons:moon-filled"></iconify-icon></a></button>
+                <button><a href="profile.html"><i class='bx bx-user-circle'></i></a></button>
             </div>
         </header>
         <div class="row mt-3  g-3 g-md-4">
