--- a/payroll.html
+++ b/payroll.html
@@ -53,7 +53,7 @@
             <li>
                 <a href="payroll.html">
                     <i class='bx bx-credit-card-alt' style="color:#0ac30a;"></i>
-                    <span class="links_name">Payroll</span>
+                    <span class="links_name" style="color:#0ac30a;">Payroll</span>
                 </a>
                 <span class="tooltip">Payroll</span>
             </li>
@@ -147,42 +147,15 @@
                         <p id="directionRlt">Arabic</p>
                     </div>
                 </button>
-                <button><a href=""><i class='bx bx-notification'></i></a></button>
-                <button><a href=""><i class='bx bx-user-circle'></i></a></button>
+                <button id="darkModeToggle"><a href=""><iconify-icon
+                            icon="bitcoin-icons:moon-filled"></iconify-icon></a></button>
+                <button><a href="profile.html"><i class='bx bx-user-circle'></i></a></button>
             </div>
         </header>
 
         <div class="my-4 ">
             <h4 style="font-weight: 500;"></h4>
         </div>
-
-        <!-- <div class="row g-3 g-md-4">
-            <div class="col col-md-4 dashboard-cols">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <h5 class="card-title">Basic Pay</h5>
-                        <p class="card-text">$100</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col col-md-4 dashboard-cols">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <h5 class="card-title">Allowances</h5>
-                        <p class="card-text">$100</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col12 col-md-4 dashboard-cols">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <h5 class="card-title">Deductions</h5>
-                        <p class="card-text">$100</p>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-
 
         <div class="row">
             <div class="col-12 col-lg-4 in-main-heads in-main-head-left ">
@@ -215,8 +188,8 @@
             <div class="col-12 col-lg-4 in-main-cont in-main-cont-left">
                 <div class="px-3">
                     <div class="payroll-search px-3 d-flex align-items-center">
-                        <span><iconify-icon icon="icon-park-outline:search"></iconify-icon></span>
                         <input type="text" placeholder="Search">
+                        <span><iconify-icon icon="icon-park-outline:search"></iconify-icon></span>
                     </div>
                 </div>
                 <div class="each-in-member">
@@ -283,7 +256,7 @@
                 <center>
                     <table class="mt-4" width="100%" cellpadding="2" cellspacing="0">
                         <tbody>
-                            <tr valign="top" class="d-flex flex-column flex-lg-row justify-content-between">
+                            <tr valign="top" class="d-flex flex-column flex-lg-row">
                                 <td>
                                     <table class="tablestyle_inner">
                                         <tbody>
