--- a/profile.html
+++ b/profile.html
@@ -146,8 +146,9 @@
                         <p id="directionRlt">Arabic</p>
                     </div>
                 </button>
-                <button><a href=""><i class='bx bx-notification'></i></a></button>
-                <button><a href=""><i class='bx bx-user-circle' style="color: #088738;"></i></a></button>
+                <button id="darkModeToggle"><a href=""><iconify-icon
+                            icon="bitcoin-icons:moon-filled"></iconify-icon></a></button>
+                <button><a href="profile.html"><i class='bx bx-user-circle' style="color: #088738;"></i></a></button>
             </div>
         </header>
 
