--- a/tickets.html
+++ b/tickets.html
@@ -74,7 +74,7 @@
             <li>
                 <a href="tickets.html">
                     <i><iconify-icon icon="f7:tickets" style="color:#0ac30a;"></iconify-icon></i>
-                    <span class="links_name">Tickets</span>
+                    <span class="links_name" style="color:#0ac30a;">Tickets</span>
                 </a>
                 <span class="tooltip">Tickets</span>
             </li>
@@ -147,7 +147,7 @@
                     </div>
                 </button>
                 <button><a href=""><i class='bx bx-notification'></i></a></button>
-                <button><a href=""><i class='bx bx-user-circle'></i></a></button>
+                <button><a href="profile.html"><i class='bx bx-user-circle'></i></a></button>
             </div>
         </header>
 
