--- a/attendance.html
+++ b/attendance.html
@@ -45,8 +45,8 @@
             </li>
             <li>
                 <a href="attendance.html">
-                    <i class='bx bxs-star-half'  style="color:#0ac30a;"></i>
-                    <span class="links_name">Attendance</span>
+                    <i class='bx bxs-star-half' style="color:#0ac30a;"></i>
+                    <span class="links_name" style="color:#0ac30a;">Attendance</span>
                 </a>
                 <span class="tooltip">Attendance</span>
             </li>
@@ -146,8 +146,8 @@
                         <p id="directionRlt">Arabic</p>
                     </div>
                 </button>
-                <button><a href=""><i class='bx bx-notification'></i></a></button>
-                <button><a href=""><i class='bx bx-user-circle'></i></a></button>
+                <button id="darkModeToggle"><a href=""><iconify-icon icon="bitcoin-icons:moon-filled"></iconify-icon></a></button>
+                <button><a href="profile.html"><i class='bx bx-user-circle'></i></a></button>
             </div>
         </header>
 
