--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li>
                 <a href="index.html">
                     <i class='bx bx-grid-alt' style="color:#0ac30a;"></i>
-                    <span class="links_name">Dashboard</span>
+                    <span class="links_name" style="color:#0ac30a;">Dashboard</span>
                 </a>
                 <span class="tooltip">Dashboard</span>
             </li>
@@ -147,8 +147,9 @@
                         <p id="directionRlt">Arabic</p>
                     </div>
                 </button>
-                <button><a href=""><i class='bx bx-notification'></i></a></button>
-                <button><a href=""><i class='bx bx-user-circle'></i></a></button>
+                <button id="darkModeToggle"><a href=""><iconify-icon
+                            icon="bitcoin-icons:moon-filled"></iconify-icon></a></button>
+                <button><a href="profile.html"><i class='bx bx-user-circle'></i></a></button>
             </div>
         </header>
 
