--- a/reimbursement.html
+++ b/reimbursement.html
@@ -60,7 +60,7 @@
             <li>
                 <a href="reimbursement.html">
                     <i class='bx bx-wallet' style="color:#0ac30a;"></i>
-                    <span class="links_name">Reimbursement</span>
+                    <span class="links_name" style="color:#0ac30a;">Reimbursement</span>
                 </a>
                 <span class="tooltip">Reimbursement</span>
             </li>
@@ -148,8 +148,9 @@
                         <p id="directionRlt">Arabic</p>
                     </div>
                 </button>
-                <button><a href=""><i class='bx bx-notification'></i></a></button>
-                <button><a href=""><i class='bx bx-user-circle'></i></a></button>
+                <button id="darkModeToggle"><a href=""><iconify-icon
+                            icon="bitcoin-icons:moon-filled"></iconify-icon></a></button>
+                <button><a href="profile.html"><i class='bx bx-user-circle'></i></a></button>
             </div>
         </header>
 
