--- a/login.html
+++ b/login.html
@@ -19,10 +19,14 @@
     <div class="row login">
         <div class="col-lg-6 log-left d-flex flex-column justify-content-center align-items-center d-none d-lg-flex">
             <img src="Images/logo (2).png" alt="">
-            <h3>Welcome Back!</h3>>
+            <h3>Welcome Back!</h3>
         </div>
         <div class="col-lg-6 log-right d-flex justify-content-center align-items-center px-5">
             <form action="">
+                <div class="mobile-welcome d-lg-none">
+                    <img src="Images/logo (2).png" alt="" width="200">
+                    <h6>Welcome Back!</h6>
+                </div>
                 <h3>Log In</h3>
                 <div id="login-con">
                     <div>
