--- a/payroll.html
+++ b/payroll.html
@@ -193,59 +193,67 @@
                     </div>
                 </div>
                 <div class="each-in-member">
-                    <div class="in-name-amt">
-                        <span class="in-name">William Shakespeare</span>
-                        <span class="in-amount">$84.00</span>
-                    </div>
-                    <div class="in-num-date">
-                        <div>
-                            <span class="in-num">INV000181</span>
-                            <span class="in-date">08/05/2024</span>
+                    <div class="name-inv">
+                        <div class="in-name-amt">
+                            <span class="in-name">William Shakespeare</span>
+                            <span class="in-amount">$84.00</span>
                         </div>
-                        <div class="in-sent">Sent</div>
+                        <div class="in-num-date">
+                            <div>
+                                <span class="in-num">INV000181</span>
+                                <span class="in-date">08/05/2024</span>
+                            </div>
+                            <div class="in-sent">Sent</div>
 
+                        </div>
                     </div>
                 </div>
                 <div class="each-in-member">
-                    <div class="in-name-amt">
-                        <span class="in-name">William Shakespeare</span>
-                        <span class="in-amount">$84.00</span>
-                    </div>
-                    <div class="in-num-date">
-                        <div>
-                            <span class="in-num">INV000181</span>
-                            <span class="in-date">08/05/2024</span>
+                    <div class="name-inv">
+                        <div class="in-name-amt">
+                            <span class="in-name">William Shakespeare</span>
+                            <span class="in-amount">$84.00</span>
                         </div>
-                        <div class="in-sent">Sent</div>
+                        <div class="in-num-date">
+                            <div>
+                                <span class="in-num">INV000181</span>
+                                <span class="in-date">08/05/2024</span>
+                            </div>
+                            <div class="in-sent">Sent</div>
 
+                        </div>
                     </div>
                 </div>
                 <div class="each-in-member">
-                    <div class="in-name-amt">
-                        <span class="in-name">William Shakespeare</span>
-                        <span class="in-amount">$84.00</span>
-                    </div>
-                    <div class="in-num-date">
-                        <div>
-                            <span class="in-num">INV000181</span>
-                            <span class="in-date">08/05/2024</span>
+                    <div class="name-inv">
+                        <div class="in-name-amt">
+                            <span class="in-name">William Shakespeare</span>
+                            <span class="in-amount">$84.00</span>
                         </div>
-                        <div class="in-sent">Sent</div>
+                        <div class="in-num-date">
+                            <div>
+                                <span class="in-num">INV000181</span>
+                                <span class="in-date">08/05/2024</span>
+                            </div>
+                            <div class="in-sent">Sent</div>
 
+                        </div>
                     </div>
                 </div>
                 <div class="each-in-member">
-                    <div class="in-name-amt">
-                        <span class="in-name">William Shakespeare</span>
-                        <span class="in-amount">$84.00</span>
-                    </div>
-                    <div class="in-num-date">
-                        <div>
-                            <span class="in-num">INV000181</span>
-                            <span class="in-date">08/05/2024</span>
+                    <div class="name-inv">
+                        <div class="in-name-amt">
+                            <span class="in-name">William Shakespeare</span>
+                            <span class="in-amount">$84.00</span>
                         </div>
-                        <div class="in-sent">Sent</div>
+                        <div class="in-num-date">
+                            <div>
+                                <span class="in-num">INV000181</span>
+                                <span class="in-date">08/05/2024</span>
+                            </div>
+                            <div class="in-sent">Sent</div>
 
+                        </div>
                     </div>
                 </div>
             </div>
